--- a/Lesson2-HTML-CSS/homework/homework.html
+++ b/Lesson2-HTML-CSS/homework/homework.html
@@ -1,1 +1,25 @@
 <!-- In this file you will complete the homework found in the homework-readme.md file -->
+<html>
+<head>
+<title>Nick's HTML Homework</title>
+<link rel="stylesheet" href="./style.css">
+</head>
+<body background="https://i.stack.imgur.com/crxL9.jpg">
+<div class="divClass">
+    <h1>Nicholas</h1>
+    <h3>Lambda School</h3>
+    <h4>HTML/CSS Homework</H4>
+</div>
+<div class="divClass">
+    <span id="spanId">My favorite food is a Gyro from </span>
+    <a href="https://www.tripadvisor.com/Restaurant_Review-g155032-d1185774-Reviews-The_Pita_Pit-Montreal_Quebec.html">Pita Pit</a>
+</div>
+<div id="thirdDiv">
+    <ul>
+        <li><img src="http://www.myburger.fr/images/upload/20140429-1053_14-04-canada-074-pita-pit.jpg"/></li>
+        <li><img src="http://www.pitapitbr.com/lib/home.png"</li>
+
+    </ul>
+    </div>
+</body>
+</html>
